# mcp-telegram

./: .gitignore  CLAUDE.md  README.md  TODO.md  pyproject.toml
src/mcp_telegram/: __init__.py  cli.py  config.py  daemon.py  server.py
src/mcp_telegram/bot/: __init__.py  client.py
src/mcp_telegram/user/: __init__.py  client.py
