[project]
name = "mcp-telegram"
version = "0.2.0"
description = "Telegram MCP Server for Claude Code & AI Agents - Send messages, files, voice from your account or bot"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Yeabsira Driba" },
    { name = "Anton Nozdrin" }
]
maintainers = [
    { name = "Yeabsira Driba", email = "dryeab@gmail.com" },
    { name = "Anton Nozdrin" }
]
keywords = [
    "mcp",
    "telegram",
    "claude",
    "claude-code",
    "cursor",
    "ai-agent",
    "llm",
    "model-context-protocol",
    "mtproto",
    "bot-api",
    "telethon",
    "automation",
    "file-transfer",
    "voice-messages",
    "remote-access",
    "ai-assistant"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
license = { text = "MIT" }
dependencies = [
    "aiohttp>=3.9.0",
    "cryptg>=0.5.0.post0",
    "httpx>=0.27.0",
    "mcp>=1.0.0",
    "pydantic>=2.11.1",
    "rich>=14.0.0",
    "telethon>=1.39.0",
    "typer>=0.15.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pyright>=1.1.389",
    "ruff>=0.8.0",
    "twine>=6.1.0",
]

[project.scripts]
tg = "mcp_telegram:main"
mcp-telegram = "mcp_telegram:main"

[tool.pyright]
include = ["src/mcp_telegram/**/*.py"]
venvPath = "."
venv = ".venv"
strict = ["src/mcp_telegram/**/*.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []

[tool.ruff.lint.isort]
case-sensitive = true
known-first-party = ["mcp_telegram"]
lines-between-types = 1
order-by-type = false 

[tool.ruff]
line-length = 88
target-version = "py310"

[project.urls]
Homepage = "https://github.com/antongsm/mcp-telegram"
Repository = "https://github.com/antongsm/mcp-telegram"
Issues = "https://github.com/antongsm/mcp-telegram/issues"
Documentation = "https://github.com/antongsm/mcp-telegram#readme"
